IBX-9633: Fixed z-index for content map preview

--- a/src/bundle/Resources/public/scss/fieldType/preview/_ezgmaplocation.scss
+++ b/src/bundle/Resources/public/scss/fieldType/preview/_ezgmaplocation.scss
@@ -7,6 +7,7 @@
             width: calculateRem(520px);
             height: calculateRem(320px);
             margin-right: calculateRem(32px);
+            z-index: 1;
         }
 
         &__map-meta-wrapper {
